generator client {
  provider = "prisma-client"
  output   = "../../src/generated/client1"
}

datasource db {
  provider = "postgresql"
  schemas  = ["flexidb"]
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../dbml/schema1.dbml"
}

enum Unit {
  Piece
  Hour
  Course
  List
  Box
  Pack
  Set
  Dozen
  NotSpecified
       
  @@schema("flexidb")
}

enum UserRole {
  owner
  marketing
  accountant
  sales
  partner

  @@schema("flexidb")
}

enum taxType {
  Juristic
  Individual

  @@schema("flexidb")
}

enum Gender {
  Female
  Male
  NotSpecified

  @@schema("flexidb")
}

enum Payment {
  COD
  Transfer
  CreditCard
  Cash
  NotSpecified

  @@schema("flexidb")
}

enum SocialMedia {
  Facebook
  Line
  Tiktok
  Shopee
  Lazada
  Instagram
  X
  Youtube
  Google
  Offline

  @@schema("flexidb")
}

enum Bank {
  SCB
  KBANK
  KTB
  BBL
  TMB

  @@schema("flexidb")
}

enum BusinessType {
  OnlineSale
  Massage
  Restaurant
  Bar
  Cafe
  Rental
  Tutor
  Influencer
  Other

  @@schema("flexidb")
}

enum MediaType {
  VIDEO
  IMAGE

  @@schema("flexidb")
}

enum ReactionType {
  CREDIT
  SPARK
  DISCREDIT

  @@schema("flexidb")
}

enum Category {
  Loan
  Coaching
  OEM
  MarketingAgency
  Packaging
  accountant
  Inventory

  @@schema("flexidb")
}

enum ProductType {
  Service
  Product
  Rental

  @@schema("flexidb")
}

enum OptionName {
  Size
  Color
  Material
  Flavor
  CreditLimit
  QuantityLimit

  @@schema("flexidb")
}

enum DocumentType {
  Invoice
  Receipt
  Quotation
  DebitNote
  CreditNote
  WithholdingTax

  @@schema("flexidb")
}

enum ExpenseStatus {
  Pass
  Fail
  Warning

  @@schema("flexidb")
}

enum ExpenseGroup {
  Employee
  Freelancer
  Office
  OfficeRental
  CarRental
  Commission
  Advertising
  Marketing
  Copyright
  Dividend
  Interest
  Influencer
  Accounting
  Legal
  Taxation
  Transport
  Product
  Packing
  Utilities
  Fuel
  Maintenance
  Operation
  Labor
  LaborMaterials
  Others
  @@schema("flexidb")
}

model User {
  id                     Int           @id @default(autoincrement())
  email                  String        @unique
  password               String
  firstName              String
  lastName               String
  avatar                 String?
  emailVerifiedAt        DateTime?
  emailVerifyToken       String?
  emailVerifyTokenExpiry DateTime?
  createdAt              DateTime      @default(now())
  updatedAt              DateTime      @updatedAt
  phone                  String        @unique
  username               String?       @unique
  bio                    String?
  resetToken             String? // Optional field for reset token
  resetTokenExpiry       DateTime? // Optional field for token expiry
  business               BusinessAcc[]
  member                 Member[]

  @@schema("flexidb")
}

model Member {
  uniqueId      String          @id @default(uuid())
  role          UserRole        @default(owner)
  permission    String
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  deleted       Boolean?        @default(false)
  signature     String?        
  // Relation
  userId        Int
  user          User            @relation(fields: [userId], references: [id])
  businessId    Int?
  business      BusinessAcc?    @relation(fields: [businessId], references: [id])
  bill          Bill[]
  adsCost       AdsCost[]
  expense       Expense[]
  product       Product[]
  platform      Platform[]
  chat          ChatSession[]
  platformToken PlatformToken[]
  projects      Project[]

  @@schema("flexidb")
}

model BusinessAcc {
  id               Int               @id @default(autoincrement())
  createdAt        DateTime?         @default(now())
  updatedAt        DateTime?         @updatedAt
  businessName     String            @unique
  businessUserName String?           @unique
  businessAvatar   String?
  businessAddress  String?
  businessWebsite  String?
  businessPhone    String?
  vat              Boolean?          @default(false)
  taxId            String            @unique
  businessType     BusinessType      @default(OnlineSale)
  taxType          taxType           @default(Individual)
  userId           Int
  stamp            String?
  qrPayment        String?           
  logo             String?
  paymentTerm      String?           // Optional field for payment terms
  remark           String?           // Optional field for additional remarks
  businessColor    String? // Optional field for business color theme
  memberId         String[]          @default([]) // Track all member uniqueIds associated with this business
  DocumentType     DocumentType[]    @default([Receipt])
  user             User              @relation(fields: [userId], references: [id])
  AllMember        Member[]
  billRecord       Bill[]
  expenseRecord    Expense[]
  adsCostRecord    AdsCost[]
  platform         Platform[]
  product          Product[]
  documentCounters DocumentCounter[]
  customers        Customer[]
  projects         Project[]

  @@schema("flexidb")
}

model Customer {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Identify customer within each business by phone
  phone     String
  firstName String?
  lastName  String?
  gender    Gender?
  email     String?
  address   String?
  province  String?
  postId    String?
  taxId     String?
  taxType   taxType?  @default(Individual)
  branch    String?   @default("Head Office")

  deleted Boolean? @default(false)

  // Relation
  businessAcc Int
  businessId  BusinessAcc @relation(fields: [businessAcc], references: [id])
  bills       Bill[]

  @@unique([businessAcc, phone])
  @@index([businessAcc])
  @@schema("flexidb")
}

model DocumentCounter {
  id           Int          @id @default(autoincrement())
  businessId   Int
  documentType DocumentType
  count        Int          @default(0)
  business     BusinessAcc  @relation(fields: [businessId], references: [id])

  @@unique([businessId, documentType])
  @@schema("flexidb")
}

model Bill {
  id                   Int           @id @default(autoincrement())
  flexiId              String        @unique
  billId               String?
  quotationId          String?
  invoiceId            String?
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt
  quotationAt          DateTime?     
  invoiceAt            DateTime?     
  purchaseAt           DateTime
  receiptAt            DateTime?      
  cName                String
  cLastName            String?
  cPhone               String?
  cGender              Gender?
  cAddress             String?
  cProvince            String?  
  cCountry             String?     @default("Thailand")
  cPostId              String?
  cTaxId               String?
  product              ProductItem[]
  payment              Payment?
  total                Decimal?
  totalQuotation       Decimal?
  totalInvoice         Decimal?
  totalBeforeTax       Decimal?
  totalAfterTax        Decimal?
  totalTax             Decimal?
  vatPercent           Int?
  beforeDiscount       Decimal?  
  cashStatus           Boolean?      @default(false)
  image                String?
  deleted              Boolean?      @default(false)
  repeat               Boolean?      @default(false)
  repeatMonths         Int?          @default(0)
  note                 String?
  taxType              taxType?      @default(Individual)
  branch               String?       @default("Head Office")
  DocumentType         DocumentType? @default(Receipt)
  discount                   Int?     @default(0)
  billLevelDiscount          Int?     @default(0)
  billLevelDiscountIsPercent Boolean? @default(false)
  billLevelDiscountPercent   Float?   @default(0)
  priceValid                 DateTime? // Optional field for expiration
  validContactUntil    DateTime?
  rentalStockReleased  Boolean       @default(false)
  withHoldingTax       Boolean?      @default(false)
  WHTpercent           Decimal?      @default(0)
  WHTAmount            Decimal?      @default(0)
  splitPercent         Float?        @default(100)
  splitPercentMax      Float?        @default(100)
  isSplitChild         Boolean       @default(false)
  splitGroupId         String?
  paymentTermCondition String? // Optional field for payment
  remark               String?
  platform             SocialMedia
  isExport             Boolean?       @default(false)
  

  // Relation
  memberId     String
  member       Member      @relation(fields: [memberId], references: [uniqueId])
  businessAcc  Int
  businessId   BusinessAcc @relation(fields: [businessAcc], references: [id])
  platformId   Int?
  platformInfo Platform?   @relation(fields: [platformId], references: [id])
  expense      Expense?    @relation("BillToExpense")
  customerId   Int?
  customer     Customer?   @relation(fields: [customerId], references: [id])
  projectId    Int?
  project      Project?    @relation(fields: [projectId], references: [id])

  @@schema("flexidb")
}

model ProductItem {
  id           Int     @id @default(autoincrement())
  product      Int
  quantity     Int
  unitPrice    Int
  unitDiscount Int?    @default(0)
  billId       Int?
  unit         Unit?
  description  String?

  // Relation
  bill        Bill?   @relation(fields: [billId], references: [id])
  productList Product @relation(fields: [product], references: [id])

  @@schema("flexidb")
}

model AdsCost {
  id        Int      @id @default(autoincrement())
  date      DateTime @default(now())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  adsCost   Decimal

  // Relation
  memberId    String
  platformId  Int
  product     Int
  member      Member      @relation(fields: [memberId], references: [uniqueId])
  platform    Platform    @relation(fields: [platformId], references: [id])
  businessAcc Int
  businessId  BusinessAcc @relation(fields: [businessAcc], references: [id])
  productList Product     @relation(fields: [product], references: [id])

  @@schema("flexidb")
}

model Expense {
  date           DateTime
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  id             Int            @id @default(autoincrement())
  flexiId        String?        @unique
  expNo          String?
  amount         Decimal
  debtAmount     Decimal?       @default(0)
  group          ExpenseGroup?
  customGroup    String?
  image          String?
  pdf            String?
  invoiceImage   String?
  invoicePdf     String?
  note           String?
  desc           String?
  deleted        Boolean?       @default(false)
  save           Boolean?       @default(false)
  channel        Bank?
  code           String?
  vat            Boolean?       @default(false)
  vatAmount      Decimal?       @default(0)
  withHoldingTax Boolean?       @default(false)
  WHTpercent     Decimal?       @default(0)
  WHTAmount      Decimal?       @default(0)
  sName          String?
  sTaxId         String?
  sAddress       String?
  taxInvoiceNo   String?
  branch         String?
  taxType        taxType?       @default(Individual)
  status         ExpenseStatus?
  DocumentType   DocumentType?  @default(Receipt)
  dueDate        DateTime?
  isExport       Boolean?       @default(false)

  // Relation
  billFlexiId String?     @unique
  bill        Bill?       @relation("BillToExpense", fields: [billFlexiId], references: [flexiId])
  businessAcc Int
  businessId  BusinessAcc @relation(fields: [businessAcc], references: [id])
  memberId    String
  member      Member      @relation(fields: [memberId], references: [uniqueId])
  projectId   Int?
  project     Project?    @relation(fields: [projectId], references: [id])

  @@schema("flexidb")
}

model Platform {
  id          Int         @id @default(autoincrement())
  platform    SocialMedia
  accName     String
  accId       String?
  campaignId  String?     @unique
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  platformId  AdsCost[]
  businessAcc Int
  memberId    String
  productId   Int?
  product     Product?    @relation("ProductPlatform", fields: [productId], references: [id])
  businessId  BusinessAcc @relation(fields: [businessAcc], references: [id])
  member      Member      @relation(fields: [memberId], references: [uniqueId])
  deleted     Boolean?    @default(false)
  billRecord  Bill[]

  @@schema("flexidb")
}

model Product {
  id          Int          @id @default(autoincrement())
  name        String
  unit        Unit?
  productType ProductType? @default(Product)
  description String?
  barcode     String?
  image       String?
  stock       Int
  price       Int
  categoryId  Int?
  memberId    String
  statusId    Int?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  deleted     Boolean?     @default(false)

  // relation
  billRecord  ProductItem[]
  adsRecord   AdsCost[]
  platform    Platform[]    @relation("ProductPlatform")
  member      Member        @relation(fields: [memberId], references: [uniqueId])
  businessAcc Int
  businessId  BusinessAcc   @relation(fields: [businessAcc], references: [id])

  @@schema("flexidb")
}

model Project {
  id          Int         @id @default(autoincrement())
  name        String
  description String?
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  deleted     Boolean?    @default(false)

  // Relation
  businessAcc Int
  businessId  BusinessAcc @relation(fields: [businessAcc], references: [id])
  memberId    String
  member      Member      @relation(fields: [memberId], references: [uniqueId])
  bills       Bill[]
  expenses    Expense[]

  @@schema("flexidb")
}

model ChatSession {
  id        String        @id @default(uuid())
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt
  userId    String
  user      Member        @relation(fields: [userId], references: [uniqueId])
  title     String?
  summary   String?
  messages  ChatMessage[]
  deleted   Boolean?      @default(false)

  @@schema("flexidb")
}

model ChatMessage {
  id        Int         @id @default(autoincrement())
  createdAt DateTime    @default(now())
  message   Json
  sessionId String
  session   ChatSession @relation(fields: [sessionId], references: [id])

  @@schema("flexidb")
}

model PlatformToken {
  id        Int         @id @default(autoincrement())
  platform  SocialMedia
  memberId  String
  member    Member      @relation(fields: [memberId], references: [uniqueId])
  token     String      @unique
  createdAt DateTime    @default(now())
  updatedAt DateTime    @default(now()) @updatedAt
  expiresAt DateTime
  login     Boolean     @default(false)

  @@schema("flexidb")
}
