//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  avatar String
  emailVerifiedAt DateTime
  emailVerifyToken String
  emailVerifyTokenExpiry DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  phone String [unique, not null]
  username String [unique]
  bio String
  resetToken String
  resetTokenExpiry DateTime
  business BusinessAcc [not null]
  member Member [not null]
}

Table Member {
  uniqueId String [pk]
  role UserRole [not null, default: 'owner']
  permission String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [default: false]
  signature String
  userId Int [not null]
  user User [not null]
  businessId Int
  business BusinessAcc
  bill Bill [not null]
  adsCost AdsCost [not null]
  expense Expense [not null]
  product Product [not null]
  platform Platform [not null]
  chat ChatSession [not null]
  platformToken PlatformToken [not null]
  projects Project [not null]
}

Table BusinessAcc {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  businessName String [unique, not null]
  businessUserName String [unique]
  businessAvatar String
  businessAddress String
  businessWebsite String
  businessPhone String
  vat Boolean [default: false]
  taxId String [unique, not null]
  businessType BusinessType [not null, default: 'OnlineSale']
  taxType taxType [not null, default: 'Individual']
  userId Int [not null]
  stamp String
  qrPayment String
  logo String
  paymentTerm String
  remark String
  businessColor String
  memberId String[] [not null]
  DocumentType DocumentType[] [not null]
  user User [not null]
  AllMember Member [not null]
  billRecord Bill [not null]
  expenseRecord Expense [not null]
  adsCostRecord AdsCost [not null]
  platform Platform [not null]
  product Product [not null]
  documentCounters DocumentCounter [not null]
  customers Customer [not null]
  projects Project [not null]
}

Table Customer {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  phone String [not null]
  firstName String
  lastName String
  gender Gender
  email String
  address String
  province String
  postId String
  taxId String
  taxType taxType [default: 'Individual']
  branch String [default: 'Head Office']
  deleted Boolean [default: false]
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
  bills Bill [not null]

  indexes {
    (businessAcc, phone) [unique]
  }
}

Table DocumentCounter {
  id Int [pk, increment]
  businessId Int [not null]
  documentType DocumentType [not null]
  count Int [not null, default: 0]
  business BusinessAcc [not null]

  indexes {
    (businessId, documentType) [unique]
  }
}

Table Bill {
  id Int [pk, increment]
  flexiId String [unique, not null]
  billId String
  quotationId String
  invoiceId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quotationAt DateTime
  invoiceAt DateTime
  purchaseAt DateTime [not null]
  receiptAt DateTime
  cName String [not null]
  cLastName String
  cPhone String
  cGender Gender
  cAddress String
  cProvince String
  cCountry String [default: 'Thailand']
  cPostId String
  cTaxId String
  product ProductItem [not null]
  payment Payment
  total Decimal
  totalQuotation Decimal
  totalInvoice Decimal
  totalBeforeTax Decimal
  totalAfterTax Decimal
  totalTax Decimal
  vatPercent Int
  beforeDiscount Decimal
  cashStatus Boolean [default: false]
  image String
  deleted Boolean [default: false]
  repeat Boolean [default: false]
  repeatMonths Int [default: 0]
  note String
  taxType taxType [default: 'Individual']
  branch String [default: 'Head Office']
  DocumentType DocumentType [default: 'Receipt']
  discount Int [default: 0]
  billLevelDiscount Int [default: 0]
  billLevelDiscountIsPercent Boolean [default: false]
  billLevelDiscountPercent Float [default: 0]
  priceValid DateTime
  validContactUntil DateTime
  rentalStockReleased Boolean [not null, default: false]
  withHoldingTax Boolean [default: false]
  WHTpercent Decimal [default: 0]
  WHTAmount Decimal [default: 0]
  splitPercent Float [default: 100]
  splitPercentMax Float [default: 100]
  isSplitChild Boolean [not null, default: false]
  splitGroupId String
  paymentTermCondition String
  remark String
  platform SocialMedia [not null]
  isExport Boolean [default: false]
  memberId String [not null]
  member Member [not null]
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
  platformId Int
  platformInfo Platform
  expense Expense
  customerId Int
  customer Customer
  projectId Int
  project Project
}

Table ProductItem {
  id Int [pk, increment]
  product Int [not null]
  quantity Int [not null]
  unitPrice Int [not null]
  unitDiscount Int [default: 0]
  billId Int
  unit Unit
  description String
  bill Bill
  productList Product [not null]
}

Table AdsCost {
  id Int [pk, increment]
  date DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  adsCost Decimal [not null]
  memberId String [not null]
  platformId Int [not null]
  product Int [not null]
  member Member [not null]
  platform Platform [not null]
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
  productList Product [not null]
}

Table Expense {
  date DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  id Int [pk, increment]
  flexiId String [unique]
  expNo String
  amount Decimal [not null]
  debtAmount Decimal [default: 0]
  group ExpenseGroup
  customGroup String
  image String
  pdf String
  invoiceImage String
  invoicePdf String
  note String
  desc String
  deleted Boolean [default: false]
  save Boolean [default: false]
  channel Bank
  code String
  vat Boolean [default: false]
  vatAmount Decimal [default: 0]
  withHoldingTax Boolean [default: false]
  WHTpercent Decimal [default: 0]
  WHTAmount Decimal [default: 0]
  sName String
  sTaxId String
  sAddress String
  taxInvoiceNo String
  branch String
  taxType taxType [default: 'Individual']
  status ExpenseStatus
  DocumentType DocumentType [default: 'Receipt']
  dueDate DateTime
  isExport Boolean [default: false]
  billFlexiId String [unique]
  bill Bill
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
  memberId String [not null]
  member Member [not null]
  projectId Int
  project Project
}

Table Platform {
  id Int [pk, increment]
  platform SocialMedia [not null]
  accName String [not null]
  accId String
  campaignId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  platformId AdsCost [not null]
  businessAcc Int [not null]
  memberId String [not null]
  productId Int
  product Product
  businessId BusinessAcc [not null]
  member Member [not null]
  deleted Boolean [default: false]
  billRecord Bill [not null]
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  unit Unit
  productType ProductType [default: 'Product']
  description String
  barcode String
  image String
  stock Int [not null]
  price Int [not null]
  categoryId Int
  memberId String [not null]
  statusId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [default: false]
  billRecord ProductItem [not null]
  adsRecord AdsCost [not null]
  platform Platform [not null]
  member Member [not null]
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
}

Table Project {
  id Int [pk, increment]
  name String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [default: false]
  businessAcc Int [not null]
  businessId BusinessAcc [not null]
  memberId String [not null]
  member Member [not null]
  bills Bill [not null]
  expenses Expense [not null]
}

Table ChatSession {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user Member [not null]
  title String
  summary String
  messages ChatMessage [not null]
  deleted Boolean [default: false]
}

Table ChatMessage {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  message Json [not null]
  sessionId String [not null]
  session ChatSession [not null]
}

Table PlatformToken {
  id Int [pk, increment]
  platform SocialMedia [not null]
  memberId String [not null]
  member Member [not null]
  token String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  login Boolean [not null, default: false]
}

Enum Unit {
  Piece
  Hour
  Course
  List
  Box
  Pack
  Set
  Dozen
  NotSpecified
}

Enum UserRole {
  owner
  marketing
  accountant
  sales
  partner
}

Enum taxType {
  Juristic
  Individual
}

Enum Gender {
  Female
  Male
  NotSpecified
}

Enum Payment {
  COD
  Transfer
  CreditCard
  Cash
  NotSpecified
}

Enum SocialMedia {
  Facebook
  Line
  Tiktok
  Shopee
  Lazada
  Instagram
  X
  Youtube
  Google
  Offline
}

Enum Bank {
  SCB
  KBANK
  KTB
  BBL
  TMB
}

Enum BusinessType {
  OnlineSale
  Massage
  Restaurant
  Bar
  Cafe
  Rental
  Tutor
  Influencer
  Other
}

Enum MediaType {
  VIDEO
  IMAGE
}

Enum ReactionType {
  CREDIT
  SPARK
  DISCREDIT
}

Enum Category {
  Loan
  Coaching
  OEM
  MarketingAgency
  Packaging
  accountant
  Inventory
}

Enum ProductType {
  Service
  Product
  Rental
}

Enum OptionName {
  Size
  Color
  Material
  Flavor
  CreditLimit
  QuantityLimit
}

Enum DocumentType {
  Invoice
  Receipt
  Quotation
  DebitNote
  CreditNote
  WithholdingTax
}

Enum ExpenseStatus {
  Pass
  Fail
  Warning
}

Enum ExpenseGroup {
  Employee
  Freelancer
  Office
  OfficeRental
  CarRental
  Commission
  Advertising
  Marketing
  Copyright
  Dividend
  Interest
  Influencer
  Accounting
  Legal
  Taxation
  Transport
  Product
  Packing
  Utilities
  Fuel
  Maintenance
  Operation
  Labor
  LaborMaterials
  Others
}

Ref: Member.userId > User.id

Ref: Member.businessId > BusinessAcc.id

Ref: BusinessAcc.userId > User.id

Ref: Customer.businessAcc > BusinessAcc.id

Ref: DocumentCounter.businessId > BusinessAcc.id

Ref: Bill.memberId > Member.uniqueId

Ref: Bill.businessAcc > BusinessAcc.id

Ref: Bill.platformId > Platform.id

Ref: Bill.customerId > Customer.id

Ref: Bill.projectId > Project.id

Ref: ProductItem.billId > Bill.id

Ref: ProductItem.product > Product.id

Ref: AdsCost.memberId > Member.uniqueId

Ref: AdsCost.platformId > Platform.id

Ref: AdsCost.businessAcc > BusinessAcc.id

Ref: AdsCost.product > Product.id

Ref: Expense.billFlexiId - Bill.flexiId

Ref: Expense.businessAcc > BusinessAcc.id

Ref: Expense.memberId > Member.uniqueId

Ref: Expense.projectId > Project.id

Ref: Platform.productId > Product.id

Ref: Platform.businessAcc > BusinessAcc.id

Ref: Platform.memberId > Member.uniqueId

Ref: Product.memberId > Member.uniqueId

Ref: Product.businessAcc > BusinessAcc.id

Ref: Project.businessAcc > BusinessAcc.id

Ref: Project.memberId > Member.uniqueId

Ref: ChatSession.userId > Member.uniqueId

Ref: ChatMessage.sessionId > ChatSession.id

Ref: PlatformToken.memberId > Member.uniqueId